# huffman

./: CMakeLists.txt  README.md
include/: Application.h  HuffmanArchiver.h  Reader.h  Tree.h  Writer.h
src/: Application.cpp  HuffmanArchiver.cpp  Reader.cpp  Tree.cpp  Writer.cpp  main.cpp
test/: test.cpp
